--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -537,15 +537,19 @@
 		}
 
 		&.avatar {
-			border-radius: 100%;
+			border-radius: 40%;
 
 			&:before {
 				display: none;
 			}
 
 			img {
-				border-radius: 100%;
-				width: 100%;
+				border-radius: 50%;
+				border-image-width: 50%;
+				width: 200%;
+				display: flex;
+				align-items: center;
+				// height: 100%;
 			}
 		}
 	}
@@ -924,6 +928,10 @@
 		> .inner {
 			@include vendor('flex-grow', '1');
 			margin: 0 0 ($size-header-pad * 0.5) 0;
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			align-items: center;
 		}
 
 		strong, b {
@@ -936,7 +944,7 @@
 
 		h1 {
 			color: _palette(accent2, fg);
-			font-size: 1.35em;
+			font-size: 50px;
 			line-height: 1.75em;
 			margin: 0;
 		}
@@ -1470,7 +1478,8 @@
 
 				h1 {
 					br {
-						display: none;
+						display: flex;
+						align-items: center;
 					}
 				}
 			}
